Updated OpenAPI.
