# internal/handler/v1_task_update.go
@@ -16,21 +16,42 @@ import (
 )
 
 type updateTaskURI struct {
-	TaskID int `uri:"taskId" binding:"required"`
+	TaskID int `uri:"taskId" binding:"required" example:"24"`
 }
 
 type updateTaskBody struct {
-	Title     string `json:"title"`
-	Completed bool   `json:"completed"`
+	Title     string `json:"title" example:"some new title"`
+	Completed bool   `json:"completed" example:"true"`
 }
 
+// V1UpdateTask
+//
+// @Summary update task
+// @Tags task
+// @Accept json
+// @Produce json
+// @Param taskId path int true "taskId" minimum(1)
+// @Param data body updateTaskBody true "any of the fields"
+// @Success 204 {object} nil
+// @Failure 400 {object} HTTPError "error type, comment"
+// @Failure 401 {object} nil
+// @Failure 500 {object} HTTPError "error type, comment"
+// @Router /v1/task/{taskId} [put]
 func V1UpdateTask(ctx context.Context, postgres model.Postgres) gin.HandlerFunc {
 	return func(c *gin.Context) {
+		username, password, ok := c.Request.BasicAuth()
+		if !ok {
+			abortWithStatusUnauthorized(c)
+
+			return
+		}
+
 		var u updateTaskURI
 		if err := c.ShouldBindUri(&u); err != nil {
 			c.JSON(http.StatusBadRequest, HTTPError{
-				Error:   typeParameterRequired,
-				Comment: "task id",
+				Type:    typeParameterRequired,
+				Comment: "taskId",
+				Error:   err.Error(),
 			})
 
 			return
@@ -39,22 +60,16 @@ func V1UpdateTask(ctx context.Context, postgres model.Postgres) gin.HandlerFunc 
 		var b updateTaskBody
 		if err := c.ShouldBindJSON(&b); err != nil {
 			c.JSON(http.StatusBadRequest, HTTPError{
-				Error: typeParametersRequired,
+				Type:  typeParametersRequired,
+				Error: err.Error(),
 			})
-
-			return
-		}
-
-		username, password, ok := c.Request.BasicAuth()
-		if !ok {
-			c.AbortWithStatus(http.StatusUnauthorized)
 
 			return
 		}
 
 		if utf8.RuneCountInString(b.Title) > maxLengthTaskTitle {
 			c.JSON(http.StatusBadRequest, HTTPError{
-				Error:   typeParameterTooLong,
+				Type:    typeParameterTooLong,
 				Comment: fmt.Sprintf("max %d", maxLengthTaskTitle),
 			})
 
@@ -66,16 +81,18 @@ func V1UpdateTask(ctx context.Context, postgres model.Postgres) gin.HandlerFunc 
 		); err != nil {
 			if errors.Is(err, model.ErrTaskNotFound) {
 				c.JSON(http.StatusBadRequest, HTTPError{
-					Error:   typeTaskNotFound,
+					Type:    typeTaskNotFound,
 					Comment: strconv.Itoa(u.TaskID),
+					Error:   err.Error(),
 				})
 
 				return
 			}
 
 			c.JSON(http.StatusInternalServerError, HTTPError{
-				Error:   typeInternalError,
+				Type:    typeInternalError,
 				Comment: "update task",
+				Error:   err.Error(),
 			})
 
 			return
