# internal/handler/v1_tasks_delete.go
@@ -14,11 +14,21 @@ type deleteTasksResult struct {
 	Quantity int64 `json:"quantity"`
 }
 
+// V1DeleteTasks
+//
+// @Summary delete tasks
+// @Tags tasks
+// @Accept json
+// @Produce json
+// @Success 200 {object} deleteTasksResult
+// @Failure 401 {object} nil
+// @Failure 500 {object} HTTPError "error type, comment"
+// @Router /v1/tasks [delete]
 func V1DeleteTasks(ctx context.Context, postgres model.Postgres) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		username, password, ok := c.Request.BasicAuth()
 		if !ok {
-			c.AbortWithStatus(http.StatusUnauthorized)
+			abortWithStatusUnauthorized(c)
 
 			return
 		}
@@ -26,8 +36,9 @@ func V1DeleteTasks(ctx context.Context, postgres model.Postgres) gin.HandlerFunc
 		quantity, err := postgres.DeleteTasks(ctx, username, security.SaltPassword(password))
 		if err != nil {
 			c.JSON(http.StatusInternalServerError, HTTPError{
-				Error:   typeInternalError,
+				Type:    typeInternalError,
 				Comment: "delete task",
+				Error:   err.Error(),
 			})
 
 			return
